Add Blog func and some pages & CSS changes

--- a/OrchardSite/Pages/Index.cshtml
+++ b/OrchardSite/Pages/Index.cshtml
@@ -14,11 +14,11 @@
     </div> -->
     <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item" data-interval="60000">
-                <img src="img/portfolio/slider3.png" class="d-block w-100" alt="...">
-            </div>
             <div class="carousel-item active" data-interval="60000">
                 <img src="img/portfolio/slider3.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-interval="60000">
+                <img src="~/img/portfolio/portfolio/mision-vision.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
 
                     <!-- <div class="row">
