--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -83,9 +83,9 @@
                             <i class="fas fa-users"></i> Nosotros
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="nosotros dropdown-item" href="#">Historia</a>
+                            <a class="nosotros dropdown-item" href="#historia">Historia</a>
                             <a class="nosotros dropdown-item" href="#mision-vision">Mision y Vision</a>
-                            <a class="nosotros dropdown-item" href="#mision-vision">Objetivos</a>
+                            <a class="nosotros dropdown-item" href="#objetivos">Objetivos</a>
                         </div>
                     </li>
 
@@ -95,9 +95,9 @@
                             <i class="fas fa-user"></i> Servicios
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/Servicios">Vinculación y Tamizaje</a>
-                            <a class="dropdown-item" href="/Servicios">Capacitación</a>
-                            <a class="dropdown-item" href="/Servicios">Incidencia Política</a>
+                            <a class="dropdown-item" href="/servicios">Vinculación y Tamizaje</a>
+                            <a class="dropdown-item" href="/servicios">Capacitación</a>
+                            <a class="dropdown-item" href="/servicios">Incidencia Política</a>
                         </div>
                     </li>
 
@@ -108,7 +108,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/proyectos">Proyectos de Sustentabilidad</a>
-                            <a class="dropdown-item" href="/proyectos">Productos</a>
+                            <a class="dropdown-item" href="/productos">Productos</a>
                         </div>
                     </li>
                     
@@ -304,21 +304,13 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-black-50 mb-0">Talleres</h2>
                         <hr class="star-dark mb-5">
-                            <div class="container">
-
-                                <div class="row">
-                                    <div class="col-md-6 col-lg-12">
-                                        <div class="mb-3">
-                                            <img class="img-fluid" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">
-                                        </div>
-                                </div>
-                        </div>
+                        <img class="img-fluid mb-5" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">
                         <p class="mb-5 lead us-font">En Chacla Forever ofrecemos una gran varidad de talleres gratuitos deportivos y sociales para todos quienes quieran ser parte de nuestra comunidad.</p>
-                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="/Servicios">
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="/actividades">
                             <i class="fa fa-close"></i>
                             Buscar más talleres
                         </a>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -349,7 +341,7 @@
     </div>
 
     <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+    <div class="portfolio-modal mfp-hide" id="historia">
         <div class="portfolio-modal-dialog bg-white">
             <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
                 <i class="fa fa-3x fa-times"></i>
@@ -357,13 +349,13 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+                        <h2 class="text-secondary text-black-50 mb-0">Historia</h2>
                         <hr class="star-dark mb-5">
-                        <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                        @*<img class="img-fluid mb-5" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">*@
+                        <p class="mb-5 lead us-font">...!INFO</p>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="/actividades">
                             <i class="fa fa-close"></i>
-                            Close Project
+                            Cerrar
                         </a>
                     </div>
                 </div>
@@ -372,7 +364,7 @@
     </div>
 
     <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
+    <div class="portfolio-modal mfp-hide" id="objetivos">
         <div class="portfolio-modal-dialog bg-white">
             <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
                 <i class="fa fa-3x fa-times"></i>
@@ -380,13 +372,13 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+                        <h2 class="text-secondary text-black-50 mb-0">Objetivos</h2>
                         <hr class="star-dark mb-5">
-                        <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="">
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                        @*<img class="img-fluid mb-5" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">*@
+                        <p class="mb-5 lead us-font">...!INFO</p>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="/actividades">
                             <i class="fa fa-close"></i>
-                            Close Project
+                            Cerrar
                         </a>
                     </div>
                 </div>
