--- a/OrchardSite/Pages/Actividades.cshtml
+++ b/OrchardSite/Pages/Actividades.cshtml
@@ -3,40 +3,51 @@
 
 @{
     Layout = "_Layout";
+    var ActHeader = await Orchard.GetContentItemByAliasAsync("alias:macaco");
 }
 
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-    <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 font-weight-normal">Punny headline</h1>
-        <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
-        <a class="btn btn-outline-secondary" href="#">Coming soon</a>
-    </div>
-    <div class="product-device box-shadow d-none d-md-block"></div>
-    <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
-</div>
-
-@foreach (var Post in await Orchard.GetRecentContentItemsByContentTypeAsync("BlogPost"))
-{
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-            <div class="my-3 py-3">
-                <h2 class="display-5">@Post</h2>
-                <p class="lead">@Post.Content.BlogPost.Subtitle.Text</p>
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 mt-sm-5 text-center">
+        <img class="background-img" src="~/img/portfolio/taller-deporte.jpg" alt="Alternate Text" />
+        <div class="over-text">
+            <div class="col-md-5 p-lg-5 mx-auto my-5">
+                <h1 class="display-4 font-weight-bold text-light text-center f-xs">
+                    @ActHeader
+                </h1>
+                <div class="container rounded-pill bg-transp p-3">
+                    <p class="lead font-weight-normal text-light mt-3">
+                        @ActHeader.Content.Article.Subtitle.Text
+                    </p>
+                </div>
+                
+                @*<a class="btn btn-outline-secondary" href="#Actividades">Me entero</a>*@
             </div>
-           
+            <div class="product-device box-shadow d-none d-md-block">
+                <img class="mt-5" src="~/img/portfolio/planificacion-actividades-slider2.png" width="200" alt="Alternate Text" />
+            </div>
         </div>
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-            <div class="my-3 p-3">
-                <h2 class="display-5">@Post.Content.BlogPost.Subtitle.Text</h2>
-@{ 
-    String markdown = Post.Content.MarkdownBodyPart.Markdown;
-}
-                @Orchard.MarkdownToHtml(markdown)
-            </div>
+        
+    </div>
+
+    <section id="Actividades" class="py-0">
+        
+        <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+            @foreach (var Post in await Orchard.GetRecentContentItemsByContentTypeAsync("BlogPost"))
+            {
+                <div class="bg-dark mr-md-3 pt-1 px-2 pt-md-3 px-md-5 text-center text-white overflow-hidden m-md-0 m-sm-4 rounded ma-bot">
+                    <div class="my-1 py-1">
+                        <h3 class="display-5">@Post</h3>
+                        <p class="text-info">@Post.Content.BlogPost.Subtitle.Text</p>
+                    </div>
+                    @{
+                        string markdown = Post.Content.MarkdownBodyPart.Markdown;
+                        string imagepath = (String)Post.Content.BlogPost.Banner.Paths[0];
+                    }
+                    <p class="text-info text-justify">@Orchard.MarkdownToHtml(markdown)</p>
+                    <img class="mt-2 mb-3" src="@Orchard.AssetUrl(imagepath, width: 100)" alt="Alternate Text" />
+                </div>
+            }
+        </div>
             
-        </div>
-    </div>
+    </section>
 
-
-}
 
