--- a/OrchardSite/wwwroot/css/freelancer.css
+++ b/OrchardSite/wwwroot/css/freelancer.css
@@ -525,6 +525,14 @@ section#oficinas{
 
 
 @media (max-width: 576px) {
+   .ma-bot {
+       margin-bottom : 1em;
+       margin-top : 1em;
+    }
+    .f-xs {
+        font-size: 3em;
+        margin-top:2em;
+    }
   .mapa{
     padding-left: 0;
     padding-right: 0;    
@@ -640,8 +648,8 @@ section#oficinas{
     position: absolute;
     right: 10%;
     bottom: -30%;
-    width: 300px;
-    height: 540px;
+    width: 200px;
+    height: 350px;
     background-color: #333;
     border-radius: 21px;
     -webkit-transform: rotate(30deg);
@@ -701,3 +709,199 @@ section#oficinas{
 .overflow-hidden {
     overflow: hidden;
 }
+                        /*ACTIVIDADES CUSTOM CSS*/
+
+.background-img {
+    position: absolute; 
+    z-index: 0;
+    height: 100%;
+    width: 100%;
+    left:0;
+    filter: blur(5px);
+    
+    /*background-image : url(../img/portfolio/taller-deporte.jpg);
+    background-repeat : no-repeat;
+    background-position : center;
+    background-size :cover;*/
+}
+.over-text {
+    z-index :100;
+}
+
+                        /*SERVICIOS CUSTOM CSS*/
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+@import url(https://fonts.googleapis.com/css?family=Nunito:400,300,700);
+
+h4 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
+
+p {
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
+.letter {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 300
+}
+
+.orange-bg {
+    background: #ebb551;
+}
+
+.orange-text {
+    color: #f46320;
+}
+
+.dblue-bg {
+    background: #5a797e;
+}
+
+.dblue-text {
+    color: #6dbcc3;
+}
+
+.red-bg {
+    background: #c62642;
+}
+
+.red-text {
+    color: #7b132a;
+}
+
+.blue-bg {
+    background: #6cbcc3;
+}
+
+.blue-text {
+    color: #5a797e;
+}
+
+.shadow {
+    box-shadow: 1px 1px 4px 3px rgba(0, 0, 0, 0.1), 3px 6px 10px 5px rgba(0, 0, 0, 0.1);
+}
+
+.info {
+    width: 560px;
+    min-height: 140px;
+    background: #e5e5e5;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+    .info:after {
+        content: "";
+        width: 80px;
+        height: 140px;
+        margin-top: -140px;
+        float: right;
+        border-left: 2px dotted #999;
+        background: rgb(229, 229, 229);
+        /* Old browsers */
+        background: -moz-linear-gradient(left, rgba(229, 229, 229, 1) 0%, rgba(255, 255, 255, 1) 100%);
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(left, rgba(229, 229, 229, 1) 0%, rgba(255, 255, 255, 1) 100%);
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right, rgba(229, 229, 229, 1) 0%, rgba(255, 255, 255, 1) 100%);
+        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#e5e5e5', endColorstr='#ffffff', GradientType=1);
+        /* IE6-9 */
+    }
+
+.block {
+    width: 120px;
+    height: 140px;
+    text-align: center;
+}
+
+.letter {
+    width: 100%;
+    height: 100%;
+    font-size: 100px;
+    line-height: 140px;
+    position: aboslute;
+    float: left;
+}
+
+.arrow {
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    margin-left: 120px;
+    margin-top: 45px;
+}
+
+.orange-arrow {
+    border-left: 25px solid #ebb551;
+}
+
+.dblue-arrow {
+    border-left: 25px solid #5a797e;
+}
+
+.red-arrow {
+    border-left: 25px solid #c62642;
+}
+
+.blue-arrow {
+    border-left: 25px solid #6cbcc3;
+}
+
+.text {
+    position: absolute;
+    padding-left: 165px;
+    width: 290px;
+    text-align: justify;
+    min-height: 100px;
+    box-sizing: unset;
+}
+
+    .text h4 {
+        margin-top: 15px;
+        padding-bottom: 5px;
+        border-bottom: 2px solid #c0c1c3;
+    }
+
+    .text p {
+        margin-top: -2px;
+        font-size: 12px;
+    }
+
+/*CUSTOM CSS PROYECTOS*/
+
+.how-section1 {
+    margin-top: -15%;
+    padding: 10%;
+}
+
+    .how-section1 h4 {
+        color: #ffa500;
+        font-weight: bold;
+        font-size: 30px;
+    }
+
+    .how-section1 .subheading {
+        color: #3931af;
+        font-size: 20px;
+    }
+
+    .how-section1 .row {
+        margin-top: 10%;
+    }
+
+.how-img {
+    text-align: center;
+}
+
+    .how-img img {
+        width: 40%;
+    }
+
