fix grid actividades entries, modals fonts

--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -263,23 +263,23 @@
                         <h2 class="text-secondary mb-0">Mision y Visión</h2>
                         <hr class="star-dark mb-4">
 
-                        <div class="row m-3 pt-5 fondo-mv">
-                            <div class="col-xl-4 col-lg-6 col-md-12 mx-auto p-3 text-white bg-transp mb-5">
+                        <div class="row m-3 pt-5 fondo-mv rounded">
+                            <div class="col-xl-4 col-lg-6 col-md-12 mx-auto p-3 text-white rounded bg-transp mb-5">
                                 <h4>Misión</h4>
-                                <h6 class="mb-2 text-left">
+                                <p class="mb-2 text-left lead us-font">
                                     Al año 2020 nos vemos fortalecidos y reconocidos institucionalmente como MCC ejecutando proyectos en beneficio de
                                     nuestra comunidad LGTBI de Lima este, logrando obtener un cambio de comportamiento resposable frente a la prevención
                                     de las ITS/VIH/SIDA y el desarrollo sostenido de nuestra población, obteniendo así una comunidad empoderada y
                                     fortalecida en la lucha de la estigma y discriminación; promoviendo nuestros derechos humanos.
-                                </h6>
+                                </p>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-12 mx-auto p-3 text-white bg-transp mb-5">
+                            <div class="col-xl-4 col-lg-6 col-md-12 mx-auto p-3 text-white rounded bg-transp mb-5">
                                 <h4>Visión</h4>
-                                <h6 class="mb-2 text-left">
+                                <p class="mb-2 text-left lead us-font">
                                     Como MCC buscamos el fortalecimiento de la organizaiones LGTBI de Lima Este y el reconocimiento e igualdad de los
                                     derechos humanos de nuestra comunidad ante a la sociedad,logrando disminuir y erradicar el estigma y discriminación
                                     con énfasis a la disminución de incidencia de las ITS/VIH/SIDA en nuestra comunidad LGTBI de Lima Este.
-                                </h6>
+                                </p>
                             </div>
                         </div>
 
@@ -397,8 +397,8 @@
                     <div class="col-lg-7 mx-auto">
                         <h2 class="text-secondary text-uppercase mb-0">Hazte la prueba!</h2>
                         <hr class="star-dark mb-5">
-                        <img class="img-fluid mb-5" src="~/img/portfolio/portfolio/prueba.png" alt="">
-                        <p class="mb-5">El VIH es una infección causada por el virus de inmunodeficia humana,que ataca las defensas del cuerpo,
+                        <img class="img-fluid mb-5 rounded-pill" src="~/img/portfolio/portfolio/prueba.png" alt="">
+                        <p class="mb-5 lead us-font">El VIH es una infección causada por el virus de inmunodeficia humana,que ataca las defensas del cuerpo,
                         y deja la persona vulnerable a las infecciones y enfermedades.<br/>
                         Puedes hacerte la prueba gratis <a class="portfolio-modal-dismiss" href="#oficinas"> aquí</a></p>
                         <a class="btn btn-primary btn-lg rounded-pill" href="https://fb.com/MCC-Chacla-Forever-513978959017333/">
