--- a/OrchardSite/Pages/Actividades.cshtml
+++ b/OrchardSite/Pages/Actividades.cshtml
@@ -6,7 +6,7 @@
     var ActHeader = await Orchard.GetContentItemByAliasAsync("alias:macaco");
 }
 
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 mt-sm-5 text-center">
+    <div class="position-relative overflow-hidden p-3 mb-0 p-md-5 mt-sm-5 text-center">
         <img class="background-img" src="~/img/portfolio/taller-deporte.jpg" alt="Alternate Text" />
         <div class="over-text">
             <div class="col-md-5 p-lg-5 mx-auto my-5">
@@ -28,26 +28,31 @@
         
     </div>
 
-    <section id="Actividades" class="py-0">
-        
-        <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-            @foreach (var Post in await Orchard.GetRecentContentItemsByContentTypeAsync("BlogPost"))
-            {
-                <div class="bg-dark mr-md-3 pt-1 px-2 pt-md-3 px-md-5 text-center text-white overflow-hidden m-md-0 m-sm-4 rounded ma-bot">
-                    <div class="my-1 py-1">
-                        <h3 class="display-5">@Post</h3>
-                        <p class="text-info">@Post.Content.BlogPost.Subtitle.Text</p>
+    <section id="Actividades" class="pt-0 pb-3 px-2">
+
+        <div class="container-fluid">
+            <div class="row">
+                @foreach (var Post in await Orchard.GetRecentContentItemsByContentTypeAsync("BlogPost"))
+                {
+                    <div class="d-inline-block col-lg-6 col-md-12 text-center text-white rounded p-2">
+                        <div class="container-fluid h-100 bg-dark">
+                            <div class="my-1 py-1">
+                                <h3 class="display-5">@Post</h3>
+                                <p class="text-info">@Post.Content.BlogPost.Subtitle.Text</p>
+                            </div>
+                            @{
+                                string markdown = Post.Content.MarkdownBodyPart.Markdown;
+                                string imagepath = (String)Post.Content.BlogPost.Banner.Paths[0];
+                            }
+                            <p class="text-info text-justify">@Orchard.MarkdownToHtml(markdown)</p>
+                            <img class="mt-2 mb-3" src="@Orchard.AssetUrl(imagepath, width: 100)" alt="Alternate Text" />
+                        </div>
+
                     </div>
-                    @{
-                        string markdown = Post.Content.MarkdownBodyPart.Markdown;
-                        string imagepath = (String)Post.Content.BlogPost.Banner.Paths[0];
-                    }
-                    <p class="text-info text-justify">@Orchard.MarkdownToHtml(markdown)</p>
-                    <img class="mt-2 mb-3" src="@Orchard.AssetUrl(imagepath, width: 100)" alt="Alternate Text" />
-                </div>
-            }
+                }
+            </div>
         </div>
-            
+        
     </section>
 
 
