--- a/OrchardSite/Pages/Index.cshtml
+++ b/OrchardSite/Pages/Index.cshtml
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light py-2 px-3 js-scroll-trigger" href="#oficinas">
+            <a class="btn btn-xl btn-outline-light py-2 px-3 js-scroll-trigger" href="#contact">
                 <i class="far fa-laugh-beam mr-2"></i>
                 Visítanos!
             </a>
