--- a/OrchardSite/wwwroot/css/freelancer.css
+++ b/OrchardSite/wwwroot/css/freelancer.css
@@ -251,6 +251,7 @@ header.masthead h2 {
 .portfolio-modal .portfolio-modal-dialog {
   padding: 3rem 1rem;
   min-height: calc(70vh - 2rem);
+  max-width : 1000px;
   margin: 1rem calc(1rem - 8px);
   position: relative;
   z-index: 2;
@@ -276,9 +277,8 @@ header.masthead h2 {
     .portfolio-modal .portfolio-modal-dialog {
         min-height: 70vh;
         padding: 3rem;
-        margin: 3rem calc(3rem - 8px);
-        margin-left: 8rem;
-        margin-right: 8rem;
+        margin-left: auto;
+        margin-right: auto;
     }
   .portfolio-modal .portfolio-modal-dialog h2 {
     font-size: 3rem;
@@ -714,10 +714,10 @@ section#oficinas{
 .background-img {
     position: absolute; 
     z-index: 0;
-    height: 100%;
     width: 100%;
     left:0;
     filter: blur(5px);
+    top:-1em;
     
     /*background-image : url(../img/portfolio/taller-deporte.jpg);
     background-repeat : no-repeat;
