--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -345,8 +345,8 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-black-50 mb-0">Historia</h2>
                         <hr class="star-dark mb-5">
-                        @*<img class="img-fluid mb-5" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">*@
-                        <p class="mb-5 lead us-font">...!INFO</p>
+                        <img class="img-fluid mb-5" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">
+                        <p class="mb-5 lead us-font">!info</p>
                         <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="/actividades">
                             <i class="fa fa-close"></i>
                             Cerrar
@@ -368,8 +368,13 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-black-50 mb-0">Objetivos</h2>
                         <hr class="star-dark mb-5">
-                        @*<img class="img-fluid mb-5" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">*@
-                        <p class="mb-5 lead us-font">...!INFO</p>
+                    <img class="img-fluid mb-5" src="~/img/portfolio/portfolio/taller-deportivo.jpg" width="400" alt="">
+                    <p class="mb-5 lead us-font">
+                        .Fortalecer la respuesta comunitaria de la zona de Lima este en relación a la pre
+                        prevalencia de las ITS/VIH/Sida en nuestras comunidades, para de esta manera contribuir a la reducción del número
+                        de casos de personas pertenecientes a las poblaciones vulnerables (trans, HSH/Gays y PVVs) de nuestro
+                        distrito, todo a través de nuestro empoderamiento y trabajo articulado con el Ministerio de Salud.
+                    </p>
                         <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="/actividades">
                             <i class="fa fa-close"></i>
                             Cerrar
