--- a/OrchardSite/Pages/Actividades.cshtml
+++ b/OrchardSite/Pages/Actividades.cshtml
@@ -9,11 +9,11 @@
     <div class="position-relative overflow-hidden p-3 mb-0 p-md-5 mt-sm-5 text-center">
         <img class="background-img" src="~/img/portfolio/taller-deporte.jpg" alt="Alternate Text" />
         <div class="over-text">
-            <div class="col-md-5 p-lg-5 mx-auto my-5">
+            <div class="col-md-5 p-lg-2 mx-auto my-5">
                 <h1 class="display-4 font-weight-bold text-light text-center f-xs">
-                    @ActHeader
+                        @ActHeader
                 </h1>
-                <div class="container rounded-pill bg-transp p-3">
+                <div class="container rounded-lg bg-transp p-3">
                     <p class="lead font-weight-normal text-light mt-3">
                         @ActHeader.Content.Article.Subtitle.Text
                     </p>
@@ -34,21 +34,48 @@
             <div class="row">
                 @foreach (var Post in await Orchard.GetRecentContentItemsByContentTypeAsync("BlogPost"))
                 {
-                    <div class="d-inline-block col-lg-6 col-md-12 text-center text-white rounded p-2">
-                        <div class="container-fluid h-100 bg-dark">
-                            <div class="my-1 py-1">
-                                <h3 class="display-5">@Post</h3>
-                                <p class="text-info">@Post.Content.BlogPost.Subtitle.Text</p>
-                            </div>
-                            @{
-                                string markdown = Post.Content.MarkdownBodyPart.Markdown;
-                                string imagepath = (String)Post.Content.BlogPost.Banner.Paths[0];
-                            }
-                            <p class="text-info text-justify">@Orchard.MarkdownToHtml(markdown)</p>
-                            <img class="mt-2 mb-3" src="@Orchard.AssetUrl(imagepath, width: 300)" alt="Alternate Text" />
+                <div class="d-inline-block col-lg-6 col-md-12 text-center text-white rounded p-2">
+                    @{
+                        string markdown = Post.Content.MarkdownBodyPart.Markdown;
+                        string imagepath = (String)Post.Content.BlogPost.Banner.Paths[0];
+                        DateTime fecha_Post = (DateTime)Post.PublishedUtc;
+                        string day = fecha_Post.ToString("dd");
+                        string month = fecha_Post.ToString("MMMM");                       
+                    }
+                    <div class="container-fluid h-100 bg-dark rounded">
+                        <div style="
+                                    border-radius: 0.25rem;
+                                    background-color:darkcyan;
+                                    position: absolute;
+                                    left: 14px;
+                                    bottom: 4px;
+                                    width:100px;
+                                    height:40px;
+                                    padding-top:5px;
+                               ">
+                            <h4>@month</h4>
                         </div>
-
+                        <div style="
+                                    border-radius: .25rem;
+                                    background-color:darkcyan;
+                                    position: absolute;
+                                    right:18px;
+                                    top:11px;
+                                    width:60px;
+                                    height:60px;
+                                    padding-top:12px;
+                               ">
+                            <h3>@day</h3>
+                        </div>     
+                        <div class="my-1 pt-4">
+                            <h3 class="display-5 mx-5 text-uppercase">@Post</h3>
+                            <p class="text-warning font-weight-bold">@Post.Content.BlogPost.Subtitle.Text</p>
+                        </div>
+                        <p class="text-info text-justify">@Orchard.MarkdownToHtml(markdown)</p>
+                        <img class="mt-2 mb-3 rounded" src="@Orchard.AssetUrl(imagepath, width: 300)" alt="Alternate Text" />
                     </div>
+
+                </div>
                 }
             </div>
         </div>
