--- a/OrchardSite/wwwroot/css/freelancer.css
+++ b/OrchardSite/wwwroot/css/freelancer.css
@@ -712,13 +712,14 @@ section#oficinas{
                         /*ACTIVIDADES CUSTOM CSS*/
 
 .background-img {
-    position: absolute; 
+
+    position: absolute;
     z-index: 0;
     width: 100%;
-    left:0;
+    height: 100%;
+    left: 0;
     filter: blur(5px);
-    top:-1em;
-    
+    top: 0.5em;
     /*background-image : url(../img/portfolio/taller-deporte.jpg);
     background-repeat : no-repeat;
     background-position : center;
