--- a/OrchardSite/Pages/Index.cshtml
+++ b/OrchardSite/Pages/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@page  "/"
+﻿@page
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model OrchardSite.Pages.indexModel
 
 @{
     Layout = "_Layout";
@@ -27,10 +29,10 @@
                           </div>
                         </div> -->
                     @*<div class="col-lg-8 py-3 px-5 bg-transp mx-auto">
-                        <p class="lead">
-                            <i class="fas fa-user-friends text-capitalize"></i>  Programa: "Expansión de la respuesta nacional al VIH en poblaciones clave y vulnerables de ámbitos urbanos y amazónicos del Perú".
-                        </p>
-                    </div>*@
+                            <p class="lead">
+                                <i class="fas fa-user-friends text-capitalize"></i>  Programa: "Expansión de la respuesta nacional al VIH en poblaciones clave y vulnerables de ámbitos urbanos y amazónicos del Perú".
+                            </p>
+                        </div>*@
 
                     <div class="text-center mt-4">
                         <a class="btn btn-xl btn-outline-light ftr" href="https://fb.com/MCC-Chacla-Forever-513978959017333/">
@@ -136,41 +138,29 @@
             <div class="col-lg-6 mx-auto p-4 border-left border-right">
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                            <label>Nombre</label>
-                            <input class="form-control" id="name" type="text" placeholder="Nombre" required="required" data-validation-required-message="Please enter your name.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                            <label>Correo</label>
-                            <input class="form-control" id="email" type="email" placeholder="Correo" required="required" data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                            <label>Número Celular</label>
-                            <input class="form-control" id="phone" type="tel" placeholder="Número de Celular" required="required" data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                            <label>Mensaje</label>
-                            <textarea class="form-control" id="message" rows="5" placeholder="Mensaje" required="required" data-validation-required-message="Please enter a message."></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <br>
-                    <div id="success"></div>
+    
+                <form method="post">       
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-xl mx-5" id="sendMessageButton">Enviar</button>
+                        <label for="exampleFormControlInput1">Nombre</label>
+                        <input asp-for="nombre" type="text" class="form-control" placeholder="nombre">
                     </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Correo</label>
+                        <input asp-for="correo" type="email" class="form-control" placeholder="correo">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Número</label>
+                        <input asp-for="numCel" type="text" class="form-control" placeholder="Número celular">
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Mensaje</label>
+                        <textarea asp-for="mensaje" class="form-control"  rows="3"></textarea>
+                    </div>
+                    <br />
+                    <input type="submit" />
                 </form>
+
             </div>
             <div class="container col-lg-6 px-0 mx-0">
                 <div class="col-lg-12 col-md-8 col-mx-auto mb-4 mine" style="height: 450px;">
@@ -187,25 +177,27 @@
                     </div>
                 </div>
                 <div class="col-md-12 col-mx-auto mr-auto mb-4 mapa overflow-hidden">
-                    <div class="mapouter"><div class="gmap_canvas"><iframe width="845" height="411" id="gmap_canvas" src="https://maps.google.com/maps?q=miguel%20grau%20Chaclacayo&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de"></a></div>
-                    <style>
-                        .mapouter {
-                            position: relative;
-                            text-align: right;
-                            height: 411px;
-                            width: 845px;
-                        }
+                    <div class="mapouter">
+                        <div class="gmap_canvas"><iframe width="845" height="411" id="gmap_canvas" src="https://maps.google.com/maps?q=miguel%20grau%20Chaclacayo&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de"></a></div>
+                        <style>
+                            .mapouter {
+                                position: relative;
+                                text-align: right;
+                                height: 411px;
+                                width: 845px;
+                            }
 
-                        .gmap_canvas {
-                            overflow: hidden;
-                            background: none !important;
-                            height: 411px;
-                            width: 845px;
-                        }
-                    </style></div>
+                            .gmap_canvas {
+                                overflow: hidden;
+                                background: none !important;
+                                height: 411px;
+                                width: 845px;
+                            }
+                        </style>
+                    </div>
                 </div>
-            </div>               
-                         
+            </div>
+
         </div>
     </div>
 </section>
