--- a/OrchardSite/Pages/Index.cshtml
+++ b/OrchardSite/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <!-- Header -->
-<header class="masthead bg-white pt-5 pb-0 text-white text-center">
+<header class="masthead bg-white pt-0 pb-0 text-white text-center">
     <!-- <div class="container px-0">
         <div class="bg">
             <a class="freepik" href="http://www.freepik.com">Designed by Freepik</a>
@@ -55,78 +55,71 @@
     </div>
 </header>
 
-<!-- Portfolio Grid Section -->
+<!-- SERVICIOS -->
 <section class="portfolio pt-5" id="portfolio">
-    <div class="container">
-        <h3 class="text-center text-uppercase text-secondary mb-0">Servicios</h3>
-        <hr class="star-dark mb-5">
-        <div class="row">
-            <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-6">
-                    <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                            <i class="fas fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/prueba.png" alt="">
-                </a>
-                <h4 class="text-uppercase text-center mb-4">Prueba de VIH</h4>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-2">
-                    <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                            <i class="fas fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/deportes.png" alt="">
-                </a>
-                <h4 class="text-uppercase text-center mb-4">Talleres</h4>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-3">
-                    <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                        <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                            <i class="fas fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="img/portfolio/eventos.png" alt="">
-                </a>
-                <h4 class="text-uppercase text-center mb-4">Actividades</h4>
-            </div>
-        </div>
-    </div>
-</section>
 
-<!-- About Section -->
-<section class="text-white mb-0" id="about">
     <div class="container">
-        <h3 class="text-center text-uppercase text-white">Nosotros</h3>
-        <hr class="star-light mb-5">
-        <div class="row us-font">
-            <div class="col-lg-4 col-md-6 ml-auto p-3 m-1 bg-transp">
-                <p class="lead">
-                    La Asociación Civil CHACLA´ FOREVER, se formó en el año 2000,
-                    con un grupo de amigos deportistas gays y mujeres trans, preocupados por los múltiples
-                    decesos de nuestras amistades, que no tenían acceso a la salud y a la información en
-                    prevención de ITS/VIH/SIDA.
-                </p>
+
+        <div class="row">
+
+            <div id="Servicios" class="col-lg-8">
+
+                <h3 class="text-center text-uppercase text-secondary mb-0">Servicios</h3>
+                <hr class="star-dark mb-5">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-6">
+                            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                                    <i class="fas fa-search-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="img/portfolio/prueba.png" alt="">
+                        </a>
+                        <h4 class="text-uppercase text-center mb-4">Prueba de VIH</h4>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-2">
+                            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                                    <i class="fas fa-search-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="img/portfolio/deportes.png" alt="">
+                        </a>
+                        <h4 class="text-uppercase text-center mb-4">Talleres</h4>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <a class="portfolio-item d-block mx-auto mb-2" href="#portfolio-modal-3">
+                            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                                    <i class="fas fa-search-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="img/portfolio/eventos.png" alt="">
+                        </a>
+                        <h4 class="text-uppercase text-center mb-4">Actividades</h4>
+                    </div>
+                </div>
+
             </div>
-            <div class="col-lg-4 col-md-6 mr-auto p-3 m-1 bg-transp">
-                <p class="lead">
-                    Es así que empezamos a organizar campeonatos de voley dirigido
-                    a la comunidad LTGBI, el cual se invitaba a distintas organizaciones y ONG,
-                    realizar campañas de información en ITS/VIH/SIDA y distribución de preservativos.
-                </p>
+
+            <div id="Facebook" class="col-lg-4">
+
+                <h3 class="text-center text-uppercase text-secondary mb-0">Nuestro Facebook</h3>
+                <hr class="star-dark mb-5">
+
+                <iframe class="ml-auto mr-auto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMCC-Chacla-Forever-513978959017333%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
             </div>
+
         </div>
-        <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light py-2 px-3 js-scroll-trigger" href="#contact">
-                <i class="far fa-laugh-beam mr-2"></i>
-                Visítanos!
-            </a>
-        </div>
+
+
+
+
     </div>
+
 </section>
 
 <!-- Contact Section -->
