--- a/OrchardSite/Pages/Nosotros.cshtml
+++ b/OrchardSite/Pages/Nosotros.cshtml
@@ -5,34 +5,94 @@
 }
 
 
-<section class="text-white mb-0" id="about">
-    <div class="container">
-        <h3 class="text-center text-uppercase text-white">Nosotros</h3>
-        <hr class="star-light mb-5">
-        <div class="row us-font">
-            <div class="col-lg-4 col-md-6 ml-auto p-3 m-1 bg-transp">
-                <p class="lead">
+<section class="text-white mb-0  py-0" id="about">
+
+    <div class="bg-primary  w-100 overflow-hidden" style="height:200px;border-bottom-left-radius:5%;border-bottom-right-radius:5%;">
+        <p class="py-1 px-3 mb-1">¿Que es MCC Chacla Forever?</p>
+        <img src="../img/portfolio/nosotros2-arreglado.jpg" class="w-100" alt="Nosotros" />
+    </div>
+    <div class="container pt-2" style="color:black">
+        <h3 class="text-center text-uppercase">Nosotros</h3>
+        <hr class="star-dark mt-3 mb-4" style="color:gold">
+        <div class="row pt-2">
+            <h4 class="text-left pl-2">¿Que es MCC Chacla Forever?</h4>
+            <hr />
+            <div class="m-1 justify-content-center">
+                <p class="mx-5">
                     La Asociación Civil CHACLA´ FOREVER, se formó en el año 2000,
                     con un grupo de amigos deportistas gays y mujeres trans, preocupados por los múltiples
                     decesos de nuestras amistades, que no tenían acceso a la salud y a la información en
                     prevención de ITS/VIH/SIDA.
                 </p>
-            </div>
-            <div class="col-lg-4 col-md-6 mr-auto p-3 m-1 bg-transp">
-                <p class="lead">
+                <p class="mx-5">
                     Es así que empezamos a organizar campeonatos de voley dirigido
                     a la comunidad LTGBI, el cual se invitaba a distintas organizaciones y ONG,
                     realizar campañas de información en ITS/VIH/SIDA y distribución de preservativos.
                 </p>
             </div>
         </div>
-        <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light py-2 px-3 js-scroll-trigger" href="#contact">
-                <i class="far fa-laugh-beam mr-2"></i>
-                Visítanos!
-            </a>
+        <div class="row">
+            <div class="col-sm-9">
+                <h4 class="text-left">Misión</h4><hr />
+                <p class="pt-2">
+                    Al año 2020 nos vemos fortalecidos y reconocidos institucionalmente
+                    como MCC ejecutando proyectos en beneficio de nuestra comunidad LGTBI de Lima este, logrando obtener un cambio de comportamiento resposable frente a la prevención de las ITS/VIH/SIDA y el desarrollo sostenido de nuestra población, obteniendo así una comunidad empoderada y fortalecida
+                    en la lucha de la estigma y discriminación; promoviendo nuestros derechos humanos.
+                </p>
+                <h4 class="text-left">Visión</h4><hr />
+                <p class="pt-1">
+                    Como MCC buscamos el fortalecimiento de las organizaciónes LGTBI de Lima Este y el reconocimiento e igualdad de los derechos humanos de nuestra comunidad ante a la sociedad, logrando disminuir y erradicar el estigma y discriminación con énfasis a la disminución de incidencia
+                    de las ITS/VIH/SIDA en nuestra comunidad LGTBI de Lima Este.
+                </p>
+                <h4 class="text-left">Objetivos</h4><hr />
+                <h6 class="text-left">General</h6>
+                <ul>
+                    <li><p class="pt-1">
+                        Fortalecer la respuesta comunitaria de la zona de Lima este en relación a la prevalencia de las ITS/VIH/SIDA en nuestras comunidades, para de esta manera contribuir a la reducción del número de casos de personas pertenecientes a las poblaciones vulnerables y
+                        trabajo articulado con el Ministerio de Salud.
+                    </p></li>
+                </ul>    
+                
+                <h6 class="text-left">Específicos</h6>
+                <ul>
+                    <li>
+                        <p class="pt-1">
+                            Lograr una Comunidad más informada con respecto a los temas en ITS/VIH/SIDA para que puedan tomar mejores decisiones
+                            en relación al ejercicio de su sexualidad y estilos de vida.
+                        </p>
+                    </li>
+                    <li>
+                        <p class="pt-1">
+                            Reducir la estigma y discriminación que se relacionan con las personas que pertenecen a las poblaciones vulnerables de mujeres Trans, Hsh/gays y las PVVs a través de procesos de sensibilización y organización aliada.
+                        </p>
+                    </li>
+                    <li>
+                        <p class="pt-1">
+                            Incrementar la cobertura de tamizaje atención y acceso a tratamiento de las personas de nuestras comunidades que han estado expuestas a las ITS y al VIH.
+                        </p>
+                    </li>
+                    <li>
+                        <p class="pt-1">
+                            Trabajar en forma fluida con los aliados, estratégicos, gobiernos locales, entidades privadas, etc. (experiencia, infraestructura y conocimiento).
+                        </p>
+                    </li>
+                    <li>
+                        <p class="pt-1">
+                            Fortalecer nuestro MCC como aliado comunitario en la respuesta nacional de lucha contra el VIH/Sida en nuestra zona de Lima Este.
+                        </p>
+                    </li>
+                </ul>
+                
+
+            </div>
+            <div class="col-sm-3">
+                <img width="210" height="200" class="mt-4 d-none d-md-block rounded-lg" src="~/img/portfolio/mision-vision.png" alt="imagen de misión" />
+                <img width="210" height="200" class="mt-5 d-none d-md-block rounded-lg" src="~/img/portfolio/portfolio/prueba.jpg" alt="prueba" />           
+            </div>
+            
         </div>
     </div>
+
 </section>
 
 
