--- a/OrchardSite/Pages/_Layout.cshtml
+++ b/OrchardSite/Pages/_Layout.cshtml
@@ -69,18 +69,37 @@
 
         <!-- Navigation -->
         <header class="brand-header">
-            <div class="d-flex">
-                <div class="ml-auto mr-auto py-2" style="width:150px">
+            <div class="d-flex justify-content-between">
+                <div class="mx-auto py-2" style="width:150px">
                     <a href="/">
                         <img class="img-fluid" src="~/img/portfolio/logo_cro.png" alt="">
                     </a>
+                </div>
+                <div class="py-3 justify-content-end">
+                    <ul class="list-inline mb-0">
+                        <li class="mr-1 list-inline-item">
+                            <a id="facebook" class="btn btn-outline-light btn-social text-center rounded-circle" href="https://fb.com/MCC-Chacla-Forever-513978959017333/">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li class="mr-1 list-inline-item">
+                            <a id="whats" class="btn btn-outline-light btn-social text-center rounded-circle" href="https://fb.com/MCC-Chacla-Forever-513978959017333/">
+                                <i class="fab fa-whatsapp"></i>
+                            </a>
+                        </li>
+                        <li class="mr-2 list-inline-item">
+                            <a id="telefono" class="btn btn-outline-light btn-social text-center rounded-circle" href="https://fb.com/MCC-Chacla-Forever-513978959017333/">
+                                <i class="fas fa-phone"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </header>
 
         <div class="d-flex justify-content-center simple-header" id="myHeader">   
 
-                <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 align-content-center justify-content-center">
+                <nav class="navbar navbar-expand-md navbar-light bg-light w-100 align-content-center justify-content-center">
                     
                     <button class="navbar-toggler pb-2" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -89,7 +108,7 @@
                         <ul class="navbar-nav">
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="/nosotros" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-users"></i> Nosotros
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -123,14 +142,13 @@
                             </li>
 
 
-                            <li class="nav-item mx-0 mx-lg-1">
+                            <li class="nav-item mx-0 mx-md-1">
                                 <a class="nav-link py-2 px-0 px-lg-1 rounded js-scroll-trigger" href="#contact">
                                     <i class="fas fa-id-card"></i> Contáctanos
                                 </a>
                             </li>
 
-
-                            <li class="nav-item mx-0 mx-lg-1">
+                            <li class="nav-item mx-0 mx-md-1">
                                 <a class="nav-link py-2 px-0 px-lg-1 rounded js-scroll-trigger" href="/actividades">
                                     <i class="fas fa-id-card"></i> Actividades
                                 </a>
